# dirtverb

./: .gitignore  CMakeLists.txt  README.md  build.bat  install.bat
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: LofiDegrader.cpp  LofiDegrader.h  ShimmerReverb.cpp  ShimmerReverb.h  Wavefolder.cpp  Wavefolder.h
Source/UI/: CinderLookAndFeel.h  DirtLookAndFeel.cpp  DirtLookAndFeel.h  OutputMeter.h  WaveformVisualizer.cpp  WaveformVisualizer.h
